# HarmonyLinkClient

./: .gitattributes  .gitignore  CMakeLists.txt  Compile.bat  Compile.sh
.github/workflows/: cmake-multi-platform.yml
HarmonyLinkLib/: CMakeLists.txt
HarmonyLinkLib/include/: Core.h  HarmonyLinkLib.h  Utilities.h  Version.h  Version.h.in
HarmonyLinkLib/include/Enums/: Device.h  EDevice.h  EPlatform.h  ESteamDeck.h  Platform.h  SteamDeck.h
HarmonyLinkLib/include/Structs/: Battery.h  CPUInfo.h  FDevice.h  StringArray.h
HarmonyLinkLib/src/: HarmonyLinkLib.c  HarmonyLinkLib.cpp  Utilities.c  Utilities.cpp  Utilities.h  Version.c
HarmonyLinkLib/src/Platform/: IPlatformUtilities.cpp  IPlatformUtilities.h  WineUtilities.cpp
HarmonyLinkLib/src/Structs/: Battery.c  CPUInfo.c  StringArray.c
HarmonyLinkTest/: CMakeLists.txt
HarmonyLinkTest/src/: main.c  main.cpp
HarmonyLinkTest_CPP/: CMakeLists.txt
HarmonyLinkTest_CPP/src/: main.cpp
LibHarmonyLink/: CMakeLists.txt
LibHarmonyLink/Resources/: Version.rc.in
LibHarmonyLink/include/: Core.h  HarmonyLinkLib.h  LibHarmonyLink.h  Utilities.h  Version.h  Version.h.in  Wine.h
LibHarmonyLink/include/Enums/: Device.h  Platform.h  SteamDeck.h
LibHarmonyLink/include/Structs/: Battery.h  CPUInfo.h  Device.h  OSInfo.h  StringArray.h
LibHarmonyLink/src/: HarmonyLinkLib.c  LibHarmonyLink.c  Utilities.c  Version.c  Wine.c
LibHarmonyLink/src/Structs/: Battery.c  CPUInfo.c  Device.c  OSInfo.c  StringArray.c
